Version 0.5 (XXXX-XX-XX)

    - Added support for encoding and decoding compressed terms
    
    - Optimized encoding and decoding of big integers

Version 0.4 (2010-01-10)

    - Added support for big integers

    - Added support for Erlang bitstrings whose length in bits is not a
      multiple of 8

    - Updated examples to work on Windows

    - Now decode() doesn't return String objects, only lists. Use String as
      wrapper if you expect Unicode string instead of a list.

    - Optimized encoding for lists of bytes (integer in the range 0-255)

    - Fixed encoding/decoding for integer values

    - Fixed encoding for small Unicode strings with characters in range 128-255

Version 0.3 (2010-01-03)

    - Added float datatype

    - Splitted Port and Protocol

    - Added more examples

    - Miscellaneous fixes

Version 0.2 (2009-12-29)

    - Initial version