@@ -1,3 +1,3 @@
-- Add new datatypes (None, True, False, references?)
+- Add new datatypes (None, references?)
 
 - Add version keyword to encode() function
